Fixed the issue for larger devices not scrolling, also fixed the funny scroll issue on mobile devices

--- a/src/Ombi/ClientApp/src/app/discover/components/discover/discover.component.scss
+++ b/src/Ombi/ClientApp/src/app/discover/components/discover/discover.component.scss
@@ -49,9 +49,6 @@
         max-width: 100%;
         min-width: 100%;
     }
-    .small-middle-container{
-        width:100%;
-    }
 
     .btn-group {
         width:100%;
@@ -61,16 +58,16 @@
         width:100%;
     }
 
-    .col{
+    .col {
         padding-right: 10px !important;
         padding-left:10px !important;
     }
 
-    .row{
+    .row {
         margin-left:0px;
     }
 
-    .small-padding{
+    .small-padding {
         padding-left: 5px !important;
         padding-right: 0px !important;
         height: 40em;
@@ -100,7 +97,7 @@
     ::ng-deep .mat-card-image {
         height:75% !important;
     }
-}   
+}
 
 @media (min-width: 660px) {
     .col-xl-2 {
@@ -137,7 +134,7 @@
         width:auto;
     }
 }
-    
+
 @media (min-width: 870px) {
     .col-xl-2 {
         flex: 0 0 33.33333%;
@@ -145,7 +142,7 @@
         min-width: 33.33333%;
     }
 }
-    
+
 @media (min-width: 1100px) {
     .col-xl-2 {
         flex: 0 0 20%;
@@ -153,27 +150,28 @@
         min-width: 25%;
     }
 }
-    
-@media (min-width: 1300px) {  
+
+@media (min-width: 1300px) {
     .col-xl-2 {
         flex: 0 0 18%;
         max-width: 20%;
         min-width: 20%;
     }
-}  
+}
+
 @media (min-width: 1600px) {
     .col-xl-2 {
         flex: 0 0 16.66666667%;
         max-width: 16.66666667%;
         min-width: 16.66666667%;
-    }      
+    }
 }
 @media (min-width: 1900px) {
     .col-xl-2 {
         flex: 0 0 14.285713%;
         max-width: 14.285713%;
         min-width: 14.285713%;
-    }      
+    }
 }
 
 @media (min-width: 2200px) {
@@ -181,7 +179,7 @@
         flex: 0 0 12.5%;
         max-width: 12.5%;
         min-width: 12.5%;
-    }      
+    }
 }
 
 @media (min-width: 2500px) {
@@ -189,5 +187,5 @@
         flex: 0 0 11.111111%;
         max-width: 11.111111%;
         min-width: 11.111111%;
-    }      
+    }
 }
